# halcyon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.cmake  config.sh  meson.build
cmake/: HalcyonHelpers.cmake  Helpers.cmake
examples/: CMakeLists.txt  audio.cpp  basic.cpp  events.cpp  invertor.cpp  message_box.cpp  metaprogramming.cpp  safety.cpp  text_render.cpp  update.cpp
include/halcyon/: audio.hpp  context.hpp  cpu.hpp  debug.hpp  events.hpp  filesystem.hpp  hint.hpp  image.hpp  library.hpp  main.hpp  misc.hpp  properties.hpp  subsystem.hpp  surface.hpp  system.hpp  ttf.hpp  video.hpp
include/halcyon/audio/: device.hpp  spec.hpp  stream.hpp  types.hpp
include/halcyon/events/: holder.hpp  keyboard.hpp  mouse.hpp  variant.hpp
include/halcyon/internal/: drawer.hpp  iostream.hpp  literals.hpp  pixel_reference.hpp  raii_object.hpp  resource.hpp  rwops.hpp  scaler.hpp  sdl_types.hpp  string.hpp  subsystem.hpp  system.hpp  tags.hpp  video_basic_types.hpp
include/halcyon/types/: c_string.hpp  color.hpp  exception.hpp  numeric.hpp  point.hpp  rectangle.hpp  result.hpp  string.hpp
include/halcyon/utility/: buffer.hpp  enum_bits.hpp  guard.hpp  locks.hpp  metaprogramming.hpp  non_null.hpp  optional.hpp  pass_key.hpp  printing.hpp  shared.hpp  strutil.hpp  timer.hpp
include/halcyon/video/: display.hpp  driver.hpp  message_box.hpp  palette.hpp  renderer.hpp  texture.hpp  types.hpp  window.hpp
scripts/: debug.sh  release.sh
src/: audio.cpp  context.cpp  cpu.cpp  debug.cpp  events.cpp  filesystem.cpp  hint.cpp  image.cpp  library.cpp  meson.build  misc.cpp  properties.cpp  subsystem.cpp  surface.cpp  system.cpp  templates.cpp  ttf.cpp  video.cpp
src/audio/: device.cpp  spec.cpp  stream.cpp
src/events/: holder.cpp  keyboard.cpp  mouse.cpp  variant.cpp
src/internal/: iostream.cpp  pixel_reference.cpp  rwops.cpp  string.cpp  system.cpp
src/types/: color.cpp  result.cpp  string.cpp
src/utility/: guard.cpp  strutil.cpp  timer.cpp
src/video/: display.cpp  driver.cpp  message_box.cpp  palette.cpp  renderer.cpp  texture.cpp  window.cpp
test/: data.hpp  main.cpp
